{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 0,
  "lineage": "",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_testing_on_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-1719510325",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09927b923feb59620",
            "security_group_rule_id": "sgr-08179eea08798707f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_cluster.aws_security_group.web_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.web_cluster",
      "mode": "managed",
      "type": "aws_elb",
      "name": "simple_loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:966727776968:loadbalancer/staging-webcluster-load-balancer",
            "availability_zones": [
              "eu-west-2a",
              "eu-west-2b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "staging-webcluster-load-balancer-625224144.eu-west-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "staging-webcluster-load-balancer",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "staging-webcluster-load-balancer",
            "security_groups": [
              "sg-0ce8c4b0ff7e8137c"
            ],
            "source_security_group": "966727776968/default_elb_4080dce2-564f-3ce0-b95e-138d862950a3",
            "source_security_group_id": "sg-0ce8c4b0ff7e8137c",
            "subnets": [
              "subnet-0385477d2167f78e0",
              "subnet-0dfa1925f4155b859"
            ],
            "zone_id": "ZHURV8PSTC4K8"
          }
        }
      ]
    },
    {
      "module": "module.web_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:966727776968:security-group/sg-0593441e4c991f2ef",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0593441e4c991f2ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "staging-webcluster-loadbalancer-sg",
            "name_prefix": "",
            "owner_id": "966727776968",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e584b372fcc4236a"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:966727776968:security-group/sg-09927b923feb59620",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09927b923feb59620",
            "ingress": [],
            "name": "staging-webcluster-simple-server-sg",
            "name_prefix": "",
            "owner_id": "966727776968",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e584b372fcc4236a"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-1753499884",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09927b923feb59620",
            "security_group_rule_id": "sgr-0d5baa1fc00529936",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_cluster.aws_security_group.web_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.web_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1950033225",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09927b923feb59620",
            "security_group_rule_id": "sgr-0150b96c6d106e192",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_cluster.aws_security_group.web_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.web_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3266410748",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-09927b923feb59620",
            "security_group_rule_id": "sgr-06b52fe2f2c4659e1",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_cluster.aws_security_group.web_security_group"
          ]
        }
      ]
    }
  ]
}